SC-15 update responsive MainLayout

--- a/public/assets/scss/abstract/_classes.scss
+++ b/public/assets/scss/abstract/_classes.scss
@@ -234,6 +234,7 @@
 .mt--6 {margin-top: -4.2rem !important;}
 
 .round-lg-btn {width: 100px; height: 100px; line-height: 100px; border-radius: 100px; }
+.rounded-xxxxl {border-radius: 5px !important; }
 .rounded-xxxl {border-radius: 10px !important; }
 .rounded-xxl {border-radius:15px !important; }
 .rounded-xl {border-radius: 30px !important; }
