--- a/public/assets/scss/components/_settings.scss
+++ b/public/assets/scss/components/_settings.scss
@@ -138,7 +138,7 @@
     background-color: #fff;
     width: $dropdown-menu-width;
     padding: 25px 30px;
-    box-shadow: 0px 15px 125px rgb(0 0 0 / 22%);
+    box-shadow: 0px 15px 125px rgba(0, 0, 0, 22%);
     border-radius: 6px;
     z-index: 999;
     border:0;
