--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1268,6 +1268,9 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+.create-post:hover {
+  background-color: #dfe3ee !important; }
+
 :root {
   --bs-primary: #1E74FD;
   --bs-secondary: #673BB7;
@@ -5031,6 +5034,8 @@ textarea.form-control-lg {
     border-width: 0 0 1px; }
     .list-group-flush > .list-group-item:last-child {
       border-bottom-width: 0; }
+    .list-group-flush > .list-group-item:hover {
+      background-color: #f7f7f7 !important; }
 
 .list-group-item-primary {
   color: #124698;
@@ -12040,6 +12045,9 @@ select.sort {
     position: absolute; } }
 
 @media (min-width: 1800px) {
+  .col-xxl-12 {
+    flex: 0 0 100%;
+    max-width: 100%; }
   .col-xxl-9 {
     flex: 0 0 70%;
     max-width: 70%; }
@@ -12054,20 +12062,18 @@ select.sort {
   .container-half-fluid {
     width: 1400px; }
   .p-xxl-5 {
-    padding: 3rem !important; } }
-
-@media (min-width: 1400px) {
-  .middle-sidebar-left {
-    padding-right: 0;
-    margin-right: auto;
-    margin-left: auto;
-    max-width: 960px; } }
+    padding: 3rem !important; }
+  .col-xxl-12 {
+    flex: 0 0 100%;
+    max-width: 100%; }
+  .middle-sidebar-bottom {
+    justify-content: center; } }
 
 @media (min-width: 1200px) {
   .middle-sidebar-left {
     padding-right: 0;
-    margin-right: auto;
-    margin-left: auto;
+    margin-right: 0;
+    margin-left: 0;
     max-width: 960px; }
   .vh-lg-100 {
     height: 100vh; }
@@ -12079,6 +12085,13 @@ select.sort {
     padding: 3rem !important; }
   .w-lg-75 {
     width: 75%; } }
+
+@media (max-width: 1400px) {
+  .middle-sidebar-left {
+    padding-right: 0;
+    margin-right: 0;
+    margin-left: 0;
+    max-width: 900px; } }
 
 @media (max-width: 1600px) {
   .display5-size {
