--- a/public/assets/scss/components/_custom.scss
+++ b/public/assets/scss/components/_custom.scss
@@ -9,3 +9,12 @@
     background-color: #dfe3ee !important;
   }
 }
+
+.cropper-crop-box, .cropper-view-box {
+  border-radius: 50%;
+}
+
+.cropper-view-box {
+  box-shadow: 0 0 0 1px #39f;
+  outline: 0;
+}
