--- a/public/assets/scss/components/_custom.scss
+++ b/public/assets/scss/components/_custom.scss
@@ -18,3 +18,10 @@
   box-shadow: 0 0 0 1px #39f;
   outline: 0;
 }
+
+.input-placeholder{
+  span:empty:before {
+    content: attr(placeholder);
+    color: #aaa;
+  }
+}
