--- a/src/assets/scss/cropper.scss
+++ b/src/assets/scss/cropper.scss
@@ -1,293 +1,277 @@
 $cropper-image-path: '../images' !default;
 
-.cropper {
-    &-container {
-        direction: ltr;
-        font-size: 0;
-        line-height: 0;
-        position: relative;
-        touch-action: none;
-        user-select: none;
+.cropper-container {
+    direction: ltr;
+    font-size: 0;
+    line-height: 0;
+    overflow: hidden;
+    position: relative;
+    touch-action: none;
+    user-select: none;
 
-        img {
-            backface-visibility: hidden;
-            display: block;
-            height: 100%;
-            image-orientation: 0deg;
-            max-height: none !important;
-            max-width: none !important;
-            min-height: 0 !important;
-            min-width: 0 !important;
-            width: 100%;
-        }
-    }
-
-    &-wrap-box,
-    &-canvas,
-    &-drag-box,
-    &-crop-box,
-    &-modal {
-        bottom: 0;
-        left: 0;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    &-wrap-box,
-    &-canvas {
-        overflow: hidden;
-    }
-
-    &-drag-box {
-        background-color: #fff;
-        opacity: 0;
-    }
-
-    &-modal {
-        background-color: #000;
-        opacity: 0.5;
-    }
-
-    &-view-box {
+    & img {
         display: block;
         height: 100%;
-        outline: 1px solid #39f;
-        outline-color: rgba(51, 153, 255, 0.75);
-        overflow: hidden;
+        max-height: none !important;
+        max-width: none !important;
+        min-height: 0 !important;
+        min-width: 0 !important;
         width: 100%;
-        // box-shadow: 0 0 0 1px #39f;
-        // border-radius: 50%;
-        // outline:inherit !important;
     }
+}
 
-    &-dashed {
-        border: 0 dashed #eee;
-        display: block;
-        opacity: 0.5;
-        position: absolute;
+.cropper-canvas,
+.cropper-drag-box,
+.cropper-crop-box {
+    left: 0;
+    position: absolute;
+    top: 0;
+}
 
-        &.dashed-h {
-            border-bottom-width: 1px;
-            border-top-width: 1px;
-            height: calc(100% / 3);
-            left: 0;
-            top: calc(100% / 3);
-            width: 100%;
-        }
+.cropper-drag-box {
+    background-color: #fff;
+    bottom: 0;
+    opacity: 0;
+    right: 0;
+}
 
-        &.dashed-v {
-            border-left-width: 1px;
-            border-right-width: 1px;
-            height: 100%;
-            left: calc(100% / 3);
-            top: 0;
-            width: calc(100% / 3);
-        }
-    }
+.cropper-modal {
+    background-color: #000;
+    opacity: 0.5;
+}
 
-    &-center {
-        display: block;
-        height: 0;
-        left: 50%;
-        opacity: 0.75;
-        position: absolute;
-        top: 50%;
-        width: 0;
+.cropper-view-box {
+    height: 100%;
+    outline: 1px solid #39f;
+    outline-color: rgba(51, 153, 255, 0.75);
+    overflow: hidden;
+    width: 100%;
+}
 
-        &::before,
-        &::after {
-            background-color: #eee;
-            content: ' ';
-            display: block;
-            position: absolute;
-        }
+.cropper-dashed {
+    border: 0 dashed #eee;
+    opacity: 0.5;
+    position: absolute;
 
-        &::before {
-            height: 1px;
-            left: -3px;
-            top: 0;
-            width: 7px;
-        }
-
-        &::after {
-            height: 7px;
-            left: 0;
-            top: -3px;
-            width: 1px;
-        }
-    }
-
-    &-face,
-    &-line,
-    &-point {
-        display: block;
-        height: 100%;
-        opacity: 0.1;
-        position: absolute;
+    &.dashed-h {
+        border-bottom-width: 1px;
+        border-top-width: 1px;
+        height: calc(100% / 3);
+        left: 0;
+        top: calc(100% / 3);
         width: 100%;
     }
 
-    &-face {
-        background-color: #fff;
-        left: 0;
+    &.dashed-v {
+        border-left-width: 1px;
+        border-right-width: 1px;
+        height: 100%;
+        left: calc(100% / 3);
         top: 0;
-        // background-color:inherit !important;
+        width: calc(100% / 3);
+    }
+}
+
+.cropper-center {
+    height: 0;
+    left: 50%;
+    opacity: 0.75;
+    position: absolute;
+    top: 50%;
+    width: 0;
+
+    &::before,
+    &::after {
+        background-color: #eee;
+        content: ' ';
+        display: block;
+        position: absolute;
     }
 
-    &-line {
-        background-color: #39f;
-
-        &.line-e {
-            cursor: ew-resize;
-            right: -3px;
-            top: 0;
-            width: 5px;
-        }
-
-        &.line-n {
-            cursor: ns-resize;
-            height: 5px;
-            left: 0;
-            top: -3px;
-        }
-
-        &.line-w {
-            cursor: ew-resize;
-            left: -3px;
-            top: 0;
-            width: 5px;
-        }
-
-        &.line-s {
-            bottom: -3px;
-            cursor: ns-resize;
-            height: 5px;
-            left: 0;
-        }
+    &::before {
+        height: 1px;
+        left: -3px;
+        top: 0;
+        width: 7px;
     }
 
-    &-point {
-        background-color: #39f;
-        height: 5px;
-        opacity: 0.75;
+    &::after {
+        height: 7px;
+        left: 0;
+        top: -3px;
+        width: 1px;
+    }
+}
+
+.cropper-face,
+.cropper-line,
+.cropper-point {
+    height: 100%;
+    opacity: 0.1;
+    position: absolute;
+    width: 100%;
+}
+
+.cropper-face {
+    background-color: #fff;
+    left: 0;
+    top: 0;
+}
+
+.cropper-line {
+    background-color: #39f;
+
+    &.line-e {
+        cursor: ew-resize;
+        right: -3px;
+        top: 0;
         width: 5px;
+    }
 
-        &.point-e {
-            cursor: ew-resize;
-            margin-top: -3px;
-            right: -3px;
-            top: 50%;
+    &.line-n {
+        cursor: ns-resize;
+        height: 5px;
+        left: 0;
+        top: -3px;
+    }
+
+    &.line-w {
+        cursor: ew-resize;
+        left: -3px;
+        top: 0;
+        width: 5px;
+    }
+
+    &.line-s {
+        bottom: -3px;
+        cursor: ns-resize;
+        height: 5px;
+        left: 0;
+    }
+}
+
+.cropper-point {
+    background-color: #39f;
+    height: 5px;
+    opacity: 0.75;
+    width: 5px;
+
+    &.point-e {
+        cursor: ew-resize;
+        margin-top: -3px;
+        right: -3px;
+        top: 50%;
+    }
+
+    &.point-n {
+        cursor: ns-resize;
+        left: 50%;
+        margin-left: -3px;
+        top: -3px;
+    }
+
+    &.point-w {
+        cursor: ew-resize;
+        left: -3px;
+        margin-top: -3px;
+        top: 50%;
+    }
+
+    &.point-s {
+        bottom: -3px;
+        cursor: s-resize;
+        left: 50%;
+        margin-left: -3px;
+    }
+
+    &.point-ne {
+        cursor: nesw-resize;
+        right: -3px;
+        top: -3px;
+    }
+
+    &.point-nw {
+        cursor: nwse-resize;
+        left: -3px;
+        top: -3px;
+    }
+
+    &.point-sw {
+        bottom: -3px;
+        cursor: nesw-resize;
+        left: -3px;
+    }
+
+    &.point-se {
+        bottom: -3px;
+        cursor: nwse-resize;
+        height: 20px;
+        opacity: 1;
+        right: -3px;
+        width: 20px;
+
+        @media (min-width: 768px) {
+            height: 15px;
+            width: 15px;
         }
 
-        &.point-n {
-            cursor: ns-resize;
-            left: 50%;
-            margin-left: -3px;
-            top: -3px;
+        @media (min-width: 992px) {
+            height: 10px;
+            width: 10px;
         }
 
-        &.point-w {
-            cursor: ew-resize;
-            left: -3px;
-            margin-top: -3px;
-            top: 50%;
-        }
-
-        &.point-s {
-            bottom: -3px;
-            cursor: s-resize;
-            left: 50%;
-            margin-left: -3px;
-        }
-
-        &.point-ne {
-            cursor: nesw-resize;
-            right: -3px;
-            top: -3px;
-        }
-
-        &.point-nw {
-            cursor: nwse-resize;
-            left: -3px;
-            top: -3px;
-        }
-
-        &.point-sw {
-            bottom: -3px;
-            cursor: nesw-resize;
-            left: -3px;
-        }
-
-        &.point-se {
-            bottom: -3px;
-            cursor: nwse-resize;
-            height: 20px;
-            opacity: 1;
-            right: -3px;
-            width: 20px;
-
-            @media (min-width: 768px) {
-                height: 15px;
-                width: 15px;
-            }
-
-            @media (min-width: 992px) {
-                height: 10px;
-                width: 10px;
-            }
-
-            @media (min-width: 1200px) {
-                height: 5px;
-                opacity: 0.75;
-                width: 5px;
-            }
-        }
-
-        &.point-se::before {
-            background-color: #39f;
-            bottom: -50%;
-            content: ' ';
-            display: block;
-            height: 200%;
-            opacity: 0;
-            position: absolute;
-            right: -50%;
-            width: 200%;
+        @media (min-width: 1200px) {
+            height: 5px;
+            opacity: 0.75;
+            width: 5px;
         }
     }
 
-    &-invisible {
-        opacity: 0;
-    }
-
-    &-bg {
-        background-image: url('#{$cropper-image-path}/bg.png');
-    }
-
-    &-hide {
+    &.point-se::before {
+        background-color: #39f;
+        bottom: -50%;
+        content: ' ';
         display: block;
-        height: 0;
+        height: 200%;
+        opacity: 0;
         position: absolute;
-        width: 0;
+        right: -50%;
+        width: 200%;
     }
+}
 
-    &-hidden {
-        display: none !important;
-    }
+.cropper-invisible {
+    opacity: 0;
+}
 
-    &-move {
-        cursor: move;
-    }
+.cropper-bg {
+    background-image: url('#{$cropper-image-path}/bg.png');
+}
 
-    &-crop {
-        cursor: crosshair;
-    }
+.cropper-hide {
+    display: block;
+    height: 0;
+    position: absolute;
+    width: 0;
+}
 
-    &-disabled &-drag-box,
-    &-disabled &-face,
-    &-disabled &-line,
-    &-disabled &-point {
+.cropper-hidden {
+    display: none !important;
+}
+
+.cropper-move {
+    cursor: move;
+}
+
+.cropper-crop {
+    cursor: crosshair;
+}
+
+.cropper-disabled {
+    & .cropper-drag-box,
+    & .cropper-face,
+    & .cropper-line,
+    & .cropper-point {
         cursor: not-allowed;
     }
 }
@@ -301,7 +285,7 @@ $cropper-image-path: '../images' !default;
             position: relative;
             touch-action: none;
             user-select: none;
-    
+
             img {
                 backface-visibility: hidden;
                 display: block;
@@ -314,7 +298,7 @@ $cropper-image-path: '../images' !default;
                 width: 100%;
             }
         }
-    
+
         &-wrap-box,
         &-canvas,
         &-drag-box,
@@ -326,22 +310,22 @@ $cropper-image-path: '../images' !default;
             right: 0;
             top: 0;
         }
-    
+
         &-wrap-box,
         &-canvas {
             overflow: hidden;
         }
-    
+
         &-drag-box {
             background-color: #fff;
             opacity: 0;
         }
-    
+
         &-modal {
             background-color: #000;
             opacity: 0.5;
         }
-    
+
         &-view-box {
             display: block;
             height: 100%;
@@ -353,13 +337,13 @@ $cropper-image-path: '../images' !default;
             border-radius: 50%;
             outline:inherit !important;
         }
-    
+
         &-dashed {
             border: 0 dashed #eee;
             display: block;
             opacity: 0.5;
             position: absolute;
-    
+
             &.dashed-h {
                 border-bottom-width: 1px;
                 border-top-width: 1px;
@@ -368,7 +352,7 @@ $cropper-image-path: '../images' !default;
                 top: calc(100% / 3);
                 width: 100%;
             }
-    
+
             &.dashed-v {
                 border-left-width: 1px;
                 border-right-width: 1px;
@@ -378,7 +362,7 @@ $cropper-image-path: '../images' !default;
                 width: calc(100% / 3);
             }
         }
-    
+
         &-center {
             display: block;
             height: 0;
@@ -387,7 +371,7 @@ $cropper-image-path: '../images' !default;
             position: absolute;
             top: 50%;
             width: 0;
-    
+
             &::before,
             &::after {
                 background-color: #eee;
@@ -395,14 +379,14 @@ $cropper-image-path: '../images' !default;
                 display: block;
                 position: absolute;
             }
-    
+
             &::before {
                 height: 1px;
                 left: -3px;
                 top: 0;
                 width: 7px;
             }
-    
+
             &::after {
                 height: 7px;
                 left: 0;
@@ -410,7 +394,7 @@ $cropper-image-path: '../images' !default;
                 width: 1px;
             }
         }
-    
+
         &-face,
         &-line,
         &-point {
@@ -420,38 +404,38 @@ $cropper-image-path: '../images' !default;
             position: absolute;
             width: 100%;
         }
-    
+
         &-face {
             background-color: #fff;
             left: 0;
             top: 0;
             background-color:inherit !important;
         }
-    
+
         &-line {
             background-color: #39f;
-    
+
             &.line-e {
                 cursor: ew-resize;
                 right: -3px;
                 top: 0;
                 width: 5px;
             }
-    
+
             &.line-n {
                 cursor: ns-resize;
                 height: 5px;
                 left: 0;
                 top: -3px;
             }
-    
+
             &.line-w {
                 cursor: ew-resize;
                 left: -3px;
                 top: 0;
                 width: 5px;
             }
-    
+
             &.line-s {
                 bottom: -3px;
                 cursor: ns-resize;
@@ -459,59 +443,59 @@ $cropper-image-path: '../images' !default;
                 left: 0;
             }
         }
-    
+
         &-point {
             background-color: #39f;
             height: 5px;
             opacity: 0.75;
             width: 5px;
-    
+
             &.point-e {
                 cursor: ew-resize;
                 margin-top: -3px;
                 right: -3px;
                 top: 50%;
             }
-    
+
             &.point-n {
                 cursor: ns-resize;
                 left: 50%;
                 margin-left: -3px;
                 top: -3px;
             }
-    
+
             &.point-w {
                 cursor: ew-resize;
                 left: -3px;
                 margin-top: -3px;
                 top: 50%;
             }
-    
+
             &.point-s {
                 bottom: -3px;
                 cursor: s-resize;
                 left: 50%;
                 margin-left: -3px;
             }
-    
+
             &.point-ne {
                 cursor: nesw-resize;
                 right: -3px;
                 top: -3px;
             }
-    
+
             &.point-nw {
                 cursor: nwse-resize;
                 left: -3px;
                 top: -3px;
             }
-    
+
             &.point-sw {
                 bottom: -3px;
                 cursor: nesw-resize;
                 left: -3px;
             }
-    
+
             &.point-se {
                 bottom: -3px;
                 cursor: nwse-resize;
@@ -519,24 +503,24 @@ $cropper-image-path: '../images' !default;
                 opacity: 1;
                 right: -3px;
                 width: 20px;
-    
+
                 @media (min-width: 768px) {
                     height: 15px;
                     width: 15px;
                 }
-    
+
                 @media (min-width: 992px) {
                     height: 10px;
                     width: 10px;
                 }
-    
+
                 @media (min-width: 1200px) {
                     height: 5px;
                     opacity: 0.75;
                     width: 5px;
                 }
             }
-    
+
             &.point-se::before {
                 background-color: #39f;
                 bottom: -50%;
@@ -549,34 +533,34 @@ $cropper-image-path: '../images' !default;
                 width: 200%;
             }
         }
-    
+
         &-invisible {
             opacity: 0;
         }
-    
+
         &-bg {
             background-image: url('#{$cropper-image-path}/bg.png');
         }
-    
+
         &-hide {
             display: block;
             height: 0;
             position: absolute;
             width: 0;
         }
-    
+
         &-hidden {
             display: none !important;
         }
-    
+
         &-move {
             cursor: move;
         }
-    
+
         &-crop {
             cursor: crosshair;
         }
-    
+
         &-disabled &-drag-box,
         &-disabled &-face,
         &-disabled &-line,
